# eolchecker

./: .gitignore  README.md  database.py  downloader.py  eol_checker.py  hardwareLifecycle.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_locked.txt  softwareLifecycle.py
eol/: database.py  downloader.py
eolchecker/: cli.py  db.py  eolchecker.py  hardware.py  helper.py  metadata.py  software.py
eolchecker/models/: __init__.py  hardwareLifecycle.py  softwareLifecycle.py
eolchecker/tools/: __init__.py  database.py  downloader.py
models/: __init__.py
tools/: __init__.py  database.py  downloader.py
