[project]
name = "eolchecker"
description = "EOL Checker is a simple application which gathers EOL information for software and hardware and allows you to query locally."
readme = "README.md"
version = "0.2.0"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
keywords = ["eol"]
authors = [{ name = "Zafer Balkan", email = "zafer@zaferbalkan.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.11.1",
    "bs4>=0.0.1",
    "certifi>=2022.6.15",
    "charset-normalizer>=2.1.0",
    "colorama>=0.4.4",
    "idna>=3.3",
    "requests>=2.28.1",
    "soupsieve>=2.3.2.post1",
    "tomli>=2.0.1",
    "typing>=3.7.4.3",
    "typing_extensions>=4.2.0",
    "urllib3>=1.26.11",
]

[project.optional-dependencies]
dev = ["mypy>=0.971", "mypy-extensions>=0.4.3"]

[project.urls]
Homepage = "https://github.com/zbalkan/eolchecker"

[project.scripts]
eolchecker = "eolchecker.eolchecker:main"

[options]
package_dir = "eolchecker"

[options.packages.find]
where = "eolchecker"

# mypy
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_any_unimported = true
no_implicit_optional = true
strict_equality = true

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
